room関連の再設計&責務分離
