# backend/src/types/question.ts
@@ -1,5 +1,0 @@
-/** Question型 */
-export interface Question {
-    questionText: string;
-    explanationText: string;
-}
